--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Twiiter Bot",
   "main": "./config.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node bot.js"
   },
   "repository": {
     "type": "git",
