added started command

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Twiiter Bot",
   "main": "./config.js",
   "scripts": {
+    "start" : "node bot.js"
     
   },
   "repository": {
