--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "bot",
     "twiiter bot"
   ],
-  "author": "Deepak Singh",
+  "author": "creepypirate",
   "license": "MIT",
   "dependencies": {
     "twit": "^2.2.11"
